[gd_scene load_steps=37 format=3 uid="uid://cxfvl01s73nj2"]

[ext_resource type="Script" uid="uid://cossebelseipv" path="res://map/scenemain.gd" id="1_7qdv2"]
[ext_resource type="PackedScene" uid="uid://bm3fnga38jpgw" path="res://player/player.tscn" id="3_5xs4b"]
[ext_resource type="Script" uid="uid://pqojknpd7mfq" path="res://map/machines.gd" id="3_3054m"]
[ext_resource type="Texture2D" uid="uid://ndqvrubmkvly" path="res://map/brick.png" id="3_rivgy"]
[ext_resource type="PackedScene" uid="uid://drvctd7cb5hjn" path="res://objekts/machines/kreator/kreator.tscn" id="4_1g66k"]
[ext_resource type="PackedScene" uid="uid://706sif4ieho8" path="res://objekts/machines/seller/seller.tscn" id="5_3054m"]
[ext_resource type="PackedScene" uid="uid://igpmsyoxijud" path="res://map/room.tscn" id="5_aofv8"]
[ext_resource type="FontFile" uid="uid://bv4vvvkt08xva" path="res://UI/IBMPlexMono-Light.ttf" id="5_la7bd"]
[ext_resource type="PackedScene" uid="uid://pqgimsdre2da" path="res://UI/shop/shop.tscn" id="6_ku0xv"]
[ext_resource type="Script" uid="uid://bv1yrr8hya03l" path="res://UI/ui.gd" id="8_vco2r"]
[ext_resource type="Script" uid="uid://vkam3gvm4ydv" path="res://UI/tutorial/tutorial.gd" id="9_45wbb"]
[ext_resource type="PackedScene" uid="uid://de8ynbju0svex" path="res://UI/pause/pause.tscn" id="10_bu086"]
[ext_resource type="PackedScene" uid="uid://cvpo7kkgufcp4" path="res://UI/loader.tscn" id="10_eycge"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_uci7l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_m6bj0"]
sky_material = SubResource("ProceduralSkyMaterial_uci7l")

[sub_resource type="Environment" id="Environment_d0nkw"]
background_mode = 2
sky = SubResource("Sky_m6bj0")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_36s5t"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 1, 0)
albedo_texture = ExtResource("3_rivgy")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_offset = Vector3(0.4, 0.4, 0.4)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sfyna"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 1, 0)
albedo_texture = ExtResource("3_rivgy")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_offset = Vector3(0.4, 0.4, 0.4)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_at6us"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 1, 0)
albedo_texture = ExtResource("3_rivgy")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_offset = Vector3(0.4, 0.4, 0.4)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jgjwo"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 1, 0)
albedo_texture = ExtResource("3_rivgy")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_offset = Vector3(0.4, 0.4, 0.4)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_hpcv7"]
size = Vector3(0.1, 0.9, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pari5"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.498039)

[sub_resource type="BoxMesh" id="BoxMesh_qv142"]

[sub_resource type="BoxShape3D" id="BoxShape3D_u6ljy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4tych"]
albedo_color = Color(0.0482631, 0.246961, 0.0412728, 1)

[sub_resource type="BoxMesh" id="BoxMesh_prg11"]
size = Vector3(200, 1, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_du6kq"]
size = Vector3(5, 3, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_voxpp"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_owxvt"]
size = Vector3(5, 0.1, 0.25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm70h"]
bg_color = Color(0, 0, 0, 0.247059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b68m"]
bg_color = Color(0, 1, 0.282353, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fyvie"]
font = ExtResource("5_la7bd")
outline_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kx77j"]
bg_color = Color(0, 0, 0, 0.247059)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 0.247059)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_uamat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fqwol"]
resource_name = "show"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbptl"]
_data = {
&"RESET": SubResource("Animation_uamat"),
&"show": SubResource("Animation_fqwol")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_7qdv2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_d0nkw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, -0.612372, 0.353553, 0, 0.5, 0.866025, -0.707107, 0.612372, -0.353553, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, 2, 10, 2)
projection = 1
size = 10.0
far = 100.0

[node name="factory" type="Node3D" parent="."]

[node name="original" parent="factory" instance=ExtResource("5_aofv8")]

[node name="mesh" parent="factory/original/wallFL" index="0"]
material_override = SubResource("StandardMaterial3D_36s5t")

[node name="mesh" parent="factory/original/wallFR" index="0"]
material_override = SubResource("StandardMaterial3D_sfyna")

[node name="mesh" parent="factory/original/hidden/wallBL" index="1"]
material_override = SubResource("StandardMaterial3D_at6us")

[node name="mesh" parent="factory/original/hidden/wallBR" index="1"]
material_override = SubResource("StandardMaterial3D_jgjwo")

[node name="boxes" type="Node3D" parent="."]

[node name="machines" type="StaticBody3D" parent="."]
collision_mask = 0
input_ray_pickable = false
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("3_3054m")

[node name="originalcreator" parent="machines" groups=["original"] instance=ExtResource("4_1g66k")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 14, 0.258902, 3)
original = true

[node name="originalseller" parent="machines" groups=["original"] instance=ExtResource("5_3054m")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0.299, 14)
original = true

[node name="irradicate" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="irradicate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_hpcv7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="irradicate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("StandardMaterial3D_pari5")
mesh = SubResource("BoxMesh_qv142")

[node name="buildradius_detection" type="Area3D" parent="irradicate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="irradicate/buildradius_detection"]
shape = SubResource("BoxShape3D_u6ljy")

[node name="univground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0)
material_override = SubResource("StandardMaterial3D_4tych")
mesh = SubResource("BoxMesh_prg11")
skeleton = NodePath("")

[node name="spawn" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_du6kq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.375)
material_override = SubResource("StandardMaterial3D_voxpp")
mesh = SubResource("BoxMesh_owxvt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="spawn"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.375, 0, 0)
material_override = SubResource("StandardMaterial3D_voxpp")
mesh = SubResource("BoxMesh_owxvt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="spawn"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2.375)
material_override = SubResource("StandardMaterial3D_voxpp")
mesh = SubResource("BoxMesh_owxvt")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="spawn"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2.375, 0, 0)
material_override = SubResource("StandardMaterial3D_voxpp")
mesh = SubResource("BoxMesh_owxvt")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8_vco2r")

[node name="kreditindikator" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_cm70h")
theme_override_styles/fill = SubResource("StyleBoxFlat_1b68m")
max_value = 10.0
show_percentage = false

[node name="level" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -30.0
offset_right = 107.0
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 8
text = "LEVEL 00"
label_settings = SubResource("LabelSettings_fyvie")
vertical_alignment = 1

[node name="kredits" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 39.0
grow_horizontal = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 2
text = "KREDITS 00"
label_settings = SubResource("LabelSettings_fyvie")

[node name="toomanyboxes" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 71.0
grow_horizontal = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 2
text = "00 BOXES FROM THE BOX LIMIT"
label_settings = SubResource("LabelSettings_fyvie")
horizontal_alignment = 1

[node name="blinker" type="Timer" parent="UI/toomanyboxes"]
wait_time = 0.2
one_shot = true

[node name="xpreq" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -768.0
offset_top = -30.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 8
text = "0/0 boxes"
label_settings = SubResource("LabelSettings_fyvie")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shop" parent="UI" instance=ExtResource("6_ku0xv")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="armtutorial" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="detail" type="RichTextLabel" parent="UI/armtutorial"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -132.0
offset_right = 192.0
offset_bottom = 124.0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_la7bd")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_kx77j")
bbcode_enabled = true
text = "press 1 to place a [color=00bfff]target[/color], the arm will send boxes to these

press 2 to place an [color=red]avoid[/color], the arm will not pick up boxes from these

press 3 to place a [color=green]priority[/color], the arm will pick up boxes from these first"
fit_content = true

[node name="building" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="detail" type="RichTextLabel" parent="UI/building"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -110.0
offset_right = -8.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_la7bd")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[right]cost"
fit_content = true

[node name="tutorial" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_45wbb")

[node name="text" type="RichTextLabel" parent="UI/tutorial"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -136.0
offset_right = 696.0
offset_bottom = -98.0
grow_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_la7bd")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_kx77j")
bbcode_enabled = true
text = "[center]tutorial stuff"
fit_content = true

[node name="basic" type="RichTextLabel" parent="UI/tutorial/text"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_right = 688.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_la7bd")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_kx77j")
bbcode_enabled = true
text = "[center]WASD to move, space to jump, scroll to zoom the camera, esc to pause
press T to close the tutorial at any time"
fit_content = true

[node name="irradicate" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -82.0
offset_right = -8.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_la7bd")
text = "delete machines"

[node name="create" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -82.0
offset_right = -232.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_la7bd")
text = "add machines"

[node name="autosave" type="Timer" parent="UI"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="saved" type="RichTextLabel" parent="UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("5_la7bd")
theme_override_font_sizes/normal_font_size = 20
text = "game saved!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/saved"]
libraries = {
&"": SubResource("AnimationLibrary_qbptl")
}
speed_scale = 4.0

[node name="pause" parent="UI" instance=ExtResource("10_bu086")]
visible = false
layout_mode = 1

[node name="player" parent="." instance=ExtResource("3_5xs4b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 4)

[node name="loader" parent="." instance=ExtResource("10_eycge")]

[node name="boxkreationdelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="boxsenddelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="exitdelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="UI/irradicate" to="." method="_on_irradicate_pressed"]
[connection signal="pressed" from="UI/create" to="UI/Shop" method="_on_create_pressed"]
[connection signal="timeout" from="UI/autosave" to="." method="_on_autosave_timeout"]

[editable path="factory/original"]
